2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve option parser.

	* scribo/debug/option_check.hh: New function for verbose mode.

	* scribo/debug/option_parser.hh: Fix a bug with misplaced options.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Add Readme files about contests.

	* src/contest/DAE-2011/README,
	* src/contest/hdibco-2010/README,
	* src/contest/hdlac-2011/README: New.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation in Scribo.

	* scribo/primitive/link/merge_double_link_closest_aligned.hh: Add
	a missing include.

	* src/content_in_hdoc.cc,
	* src/contest/DAE-2011/content_in_doc_dae.cc,
	* src/contest/DAE-2011/content_in_hdoc_dae.cc,
	* src/contest/hdlac-2011/content_in_hdoc_hdlac.cc,
	* src/non_text_components.cc: Add mandatory arguments.

2012-05-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/debug/logger.hh: Improve log system.

2012-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove useless targets in scribo/src/binarization.

	* scribo/src/binarization/Makefile.am: Remove targets.

	* src/binarization/pgm_sauvola.cc,
	* src/binarization/pgm_sauvola_ms.cc,
	* src/binarization/pgm_sauvola_threshold_image.cc,
	* src/binarization/ppm_sauvola.cc,
	* src/binarization/ppm_sauvola_ms.cc,
	* src/binarization/ppm_sauvola_ms_fg.cc,
	* src/binarization/ppm_sauvola_ms_split.cc: Remove.

2012-04-05  Guillaume Lazzara  <z@lrde.epita.fr>

	Cleanup text_in_picture_dual.

	* src/Makefile.am: Update target name.

	* src/text_in_picture_neg.cc: Rename as...
	* src/text_in_picture_dual.cc: ... this. Use option parser.

2012-04-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Make unskew an option in content_in_doc.

	* scribo/toolchain/text_in_doc_preprocess.hh,
	* src/content_in_doc.cc: Make unskew an option.

2011-12-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/subsampling/integral_single_image.hh: Fix forward
	declarations.

2011-12-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/Makefile.am: Remove -lpthread.
