@@ -34,11 +34,12 @@
 ///
 /// \brief Binarize an image using a threshold image.
 
+extern mln::image2d<bool> skewness_pbm;
+
 namespace scribo
 {
 
   using namespace mln;
-
 
   namespace binarization
   {
@@ -110,8 +111,10 @@ namespace scribo
 
 	  mln_piter(I) p(input.domain());
 	  for_all(p)
-	    output(p) = (input(p) <= threshold(p));
-
+	    if (skewness_pbm(p))
+	      output(p) = (input(p) <= threshold(p));
+	    else
+	      output(p) = ((255 - input(p)) <= threshold(p));
 
 	  trace::exiting("scribo::binarization::impl::generic::local_threshold");
 	  return output;
@@ -132,6 +135,8 @@ namespace scribo
 	const I& input = exact(input_);
 	const T& threshold = exact(threshold_);
 
+	border::resize(::skewness_pbm, input.border());
+
 	typedef mln_ch_value(I, bool) O;
 	O output;
 	initialize(output, input);
@@ -139,8 +144,12 @@ namespace scribo
 	mln_pixter(const I) pi(input);
 	mln_pixter(const T) pt(threshold);
 	mln_pixter(O) po(output);
+
 	for_all_3(pi, pt, po)
-	  po.val() = pi.val() <= pt.val();
+	  if (skewness_pbm.element(pi.offset()))
+	    po.val() = (pi.val() <= pt.val());
+	  else
+	    po.val() = ((255 - pi.val()) <= pt.val());
 
 	trace::exiting("scribo::binarization::impl::generic::local_threshold_fastest");
 	return output;
@@ -159,7 +168,7 @@ namespace scribo
 
       template <typename I, typename T>
       mln_ch_value(I, bool)
-      local_threshold_dispatch(trait::image::value_alignment::any,
+      local_threshold_dispatch(trait::image::speed::any,
 			       trait::image::speed::any,
 			       const Image<I>& input, const Image<T>& threshold)
       {
@@ -169,7 +178,7 @@ namespace scribo
 
       template <typename I, typename T>
       mln_ch_value(I, bool)
-      local_threshold_dispatch(trait::image::value_alignment::with_grid,
+      local_threshold_dispatch(trait::image::speed::fastest,
 			       trait::image::speed::fastest,
 			       const Image<I>& input, const Image<T>& threshold)
       {
@@ -181,9 +190,9 @@ namespace scribo
       local_threshold_dispatch(const Image<I>& input,
 			       const Image<T>& threshold)
       {
-	return local_threshold_dispatch(mln_trait_image_value_alignment(I)(),
-				 mln_trait_image_speed(I)(),
-				 exact(input), exact(threshold));
+	return local_threshold_dispatch(mln_trait_image_speed(I)(),
+					mln_trait_image_speed(T)(),
+					input, threshold);
       }
 
     } // end of namespace scribo::binarization::internal
